# AoC_2025

./: README.md
AoC2025H/: AoC2025H.cabal  CHANGELOG.md
AoC2025H/app/: Day3.hs  Day4.hs  Day7.hs  Main.hs  day2.hs
Aoc2025P/: helper.py
Aoc2025P/day10/: input10.txt  part1.py  part2.py
Aoc2025P/day2/: day2 copy 2.py  day2 copy.py  day2.py  deleted2.txt  example2.txt  solution2.py  stupid2.py
Aoc2025P/day3/: day3.py  deleted3.txt
Aoc2025P/day4/: day4.py  input4.txt
Aoc2025P/day5/: day5.py
Aoc2025P/day6/: input6.txt  part1.py  part2.py  test6.txt
Aoc2025P/day7/: day7.py
Aoc2025P/day8/: day8.py  input8.txt
Aoc2025P/day9/: day9.py
Day1/: Day1.cabal  test2.txt
Day1/app/: Main.hs  das.txt  day1.hs  day2.hs
