cabal-version:   3.0
name:            Day1
version:         0.1.0.0
license:         NONE
author:          LukeBomber
maintainer:      lucas@yri.dk
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable Day1
    import:           warnings
    main-is:          Main.hs
    build-depends:    
        base ^>=4.18.2.1,
        megaparsec >= 9.0,
        text
    other-modules:
        Day1
    hs-source-dirs:   app
    default-language: Haskell2010
